Fixed overflow scrolling with content with more content than div on subsections

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,13 @@
 }
 
 div{
-	overflow-y: scroll;
+	display: block;
+	overflow: auto;
+}
+
+div > #newSect{
+	display: block;
+	overflow: auto;
 }
 
 div > a{
@@ -294,7 +300,7 @@ width: 100%;
 		display: none;
 	}
 
-	header nav{
+	/*header nav{
 		float: none;
 		clear: left;
 		width: 100%;
@@ -304,15 +310,20 @@ width: 100%;
 		margin: 0px;
 		padding: 0px;
 		display: none;
-	}
+	}*/
 
 	#CallToAction{
 		font-size: 130%;
 	}
 
 	.subSection{
-		height: 100%;
+		overflow: auto;
 		width: 100%;
+	}
+
+	.sect{
+		overflow: auto;
+		display: block;
 	}
 
 	.br-left{
